# MNIST-convolutional-neural-network

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  config.py  pyproject.toml  requirements.txt
scripts/: train.py
src/: cnn.py  conv.py  maxpool.py  model_utils.py  predict.py
src/api/: main.py
src/layers/: __init__.py  softmax.py
src/utils/: __init__.py  model_utils.py  predict.py
